# opentelemetry-examples

dotnet/logs/: Program.cs  dotNet-otel.csproj
go/logs/: otel.go  rolldice.go  rolldice_go1.21.go
java/logs/: pom.xml
java/logs/src/main/java/com/logzio/otel/: DiceApplication.java  OpenTelemetryConfig.java  RollController.java
java/logs/src/main/resources/: logback.xml
java/traces/ecs-service/: README.md
java/traces/ecs-service/ecs/: task-definition.json
java/traces/ecs-service/java-app/: Dockerfile  pom.xml
java/traces/ecs-service/java-app/src/main/java/com/example/javaapp/: HelloController.java
java/traces/lambda-service/: README.md  collector-config.yaml  pom.xml
java/traces/lambda-service/src/main/java/example/: LambdaFunction.java
nodejs/logs/: package.json
nodejs/logs/src/: app.js
nodejs/logs/src/logger/: logger.js
nodejs/traces/ecs-service/: README.md
nodejs/traces/ecs-service/ecs/: task-definition.json
nodejs/traces/ecs-service/nodejs-app/: Dockerfile  app.js  package-lock.json  package.json  tracing.js
nodjs/logs/: package-lock.json
nodjs/logs/src/lib/: dice.js
php/logs/: composer.json  index.php
python/logs/: roll_dice.py
python/traces/ecs-service/: README.md
python/traces/ecs-service/ecs/: task-definition.json
python/traces/ecs-service/python-app/: Dockerfile  app.py  requirements.txt
rust/logs/: Cargo.toml
rust/logs/src/: main.rs
