[package]
name = "roll_dice_tracer"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
opentelemetry = "0.27"
opentelemetry-appender-log = "0.27"
opentelemetry_sdk = { version = "*", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "*", features = ["http-proto", "reqwest-client", "reqwest-rustls"] }
rand = "0.8"
tokio = { version = "1", features = ["full"] }
